--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     font-size: 40px;
     font-family: pixel;
     transition-duration: 0.4s;
+    
 
     
 }
@@ -52,3 +53,37 @@
     left: 840px;
 }
 
+#store{
+    width: 300px;
+    height: 180px;
+    position: fixed;
+    top: 610px;
+    left: 450px;
+    background-color: white;
+    border: 2px solid black;
+    font-size: 40px;
+    font-family: pixel;
+    transition-duration: 0.4s;
+}
+
+#store:hover{
+    background-color: black;
+    color: white;
+}
+
+#credits{
+    width: 300px;
+    height: 180px;
+    position: fixed;
+    top: 610px;
+    left: 1150px;
+    background-color: white;
+    border: 2px solid black;
+    font-size: 40px;
+    font-family: pixel;
+    transition-duration: 0.4s;
+}
+#credits:hover{
+    background-color: black;
+    color: white;
+}
