--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     font-size: 40px;
     font-family: pixel;
     transition-duration: 0.4s;
+    z-index: 1;
+    
     
 
     
@@ -43,6 +45,8 @@
     position: fixed;
     top: 100px;
     left: 690px;
+    z-index: 1;
+    
 }
 #mania{
      font-size: 80px;
@@ -51,6 +55,8 @@
     position: fixed;
     top: 170px;
     left: 840px;
+    z-index: 1;
+    
 }
 
 #store{
@@ -64,6 +70,7 @@
     font-size: 40px;
     font-family: pixel;
     transition-duration: 0.4s;
+    
 }
 
 #store:hover{
@@ -82,6 +89,8 @@
     font-size: 40px;
     font-family: pixel;
     transition-duration: 0.4s;
+    z-index: 1;
+   
 }
 #credits:hover{
     background-color: black;
@@ -92,5 +101,7 @@
     background-color: black;
     width: 2000px;
     height: 2000px;
-    display: none;
+ display: none;
+    
 }
+
