made black screen cleaner - arcade session 3
next goal is to make it fade or slide in and also add the how to play section

--- a/style.css
+++ b/style.css
@@ -100,8 +100,11 @@
 #tutorial{
     background-color: black;
     width: 2000px;
-    height: 2000px;
- display: none;
+    height: 1000px;
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
     
 }
 
