--- a/style.css
+++ b/style.css
@@ -148,3 +148,46 @@
     z-index: 1;
 }
 
+#play{
+    width: 300px;
+    height: 100px;
+    position: fixed;
+    top: 800px;
+    left: 785px;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 251, 0);
+    font-size: 40px;
+    font-family: pixel;
+    transition-duration: 0.4s;
+    z-index: 1;
+    color: rgb(255, 251, 0);
+}
+
+#play:hover{
+    background-color: rgb(255, 251, 0);
+    color: rgb(0, 0, 0);
+}
+
+#bot{
+    width: 150px;
+    position: fixed;
+    right: 80px;
+    top: 40px;
+
+    
+}
+
+#botname{
+    width: 150px;
+    position: fixed;
+    right: 250px;
+    top: 90px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+}
+
+#game{
+    display: none;
+}
+
