--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@
     width: 300px;
     height: 100px;
     position: fixed;
-    top: 800px;
+    top: 730px;
     left: 785px;
     background-color: rgb(0, 0, 0);
     border: 2px solid rgb(255, 251, 0);
@@ -191,3 +191,76 @@
     display: none;
 }
 
+
+#selecttitle{
+    font-size: 60px;
+    font-family: pixel;
+    color: rgb(255, 255, 255);
+    position: fixed;
+    top: 700px;
+    left: 700px;
+    
+}
+
+#rockplayer{
+    width: 300px;
+    height: 100px;
+    position: fixed;
+    top: 800px;
+    left: 400px;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
+    font-size: 40px;
+    font-family: pixel;
+    transition-duration: 0.4s;
+    color: rgb(255, 255, 255);
+}
+
+#rockplayer:hover{
+    background-color: rgb(255, 0, 0);
+    border-color: red;
+    color: rgb(255, 255, 255);
+
+}
+
+#paperplayer{
+    width: 300px;
+    height: 100px;
+    position: fixed;
+    top: 800px;
+    left: 785px;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
+    font-size: 40px;
+    font-family: pixel;
+    transition-duration: 0.4s;
+    color: rgb(255, 255, 255);
+}
+
+#paperplayer:hover{
+    background-color: rgb(255, 0, 0);
+    border-color: red;
+    color: rgb(255, 255, 255);
+
+}
+
+#scissorplayer{
+    width: 300px;
+    height: 100px;
+    position: fixed;
+    top: 800px;
+    left: 1165px;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
+    font-size: 40px;
+    font-family: pixel;
+    transition-duration: 0.4s;
+    color: rgb(255, 255, 255);
+}
+
+#scissorplayer:hover{
+    background-color: rgb(255, 0, 0);
+    border-color: red;
+    color: rgb(255, 255, 255);
+
+}
