split game and menu, adding return, session 7

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@
     background-color: black;
     width: 2000px;
     height: 1000px;
-    display: none;
+   
     position: fixed;
     top: 0px;
     left: 0px;
@@ -295,3 +295,27 @@
 }
 
 
+#return{
+    width: 300px;
+    height: 100px;
+    position: fixed;
+    top: 800px;
+    left: 300px;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
+    font-size: 40px;
+    font-family: pixel;
+    transition-duration: 0.4s;
+    color: rgb(255, 255, 255);
+}
+
+#return:hover{
+    background-color: rgb(255, 0, 0);
+    border-color: red;
+    color: rgb(255, 255, 255);
+
+}
+
+#end{
+    display: none;
+}
