added bot react when win/lose/tie session 7

--- a/style.css
+++ b/style.css
@@ -177,6 +177,34 @@
     
 }
 
+#botwin{
+    width: 150px;
+    position: fixed;
+    right: 80px;
+    top: 40px;
+    opacity: 0;
+
+    
+}
+#botlose{
+    width: 150px;
+    position: fixed;
+    right: 80px;
+    top: 40px;
+    opacity: 0;
+
+    
+}
+#bottie{
+    width: 150px;
+    position: fixed;
+    right: 80px;
+    top: 40px;
+    opacity: 0;
+
+    
+}
+
 #botname{
     width: 150px;
     position: fixed;
