--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 @font-face { font-family: pixel; src: url("Pixellettersfull-BnJ5.ttf"); }
 @font-face { font-family: epic; src: url("Ka Blam.ttf"); }
 
+#mainbody{
+    background-color: black;
+}
 #start{
     width: 300px;
     height: 200px;
     position: fixed;
     top: 600px;
     left: 800px;
-    background-color: white;
-    border: 2px solid black;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 0, 0);
+
+    color: rgb(255, 0, 0);
     font-size: 40px;
     font-family: pixel;
     transition-duration: 0.4s;
@@ -20,28 +25,19 @@
 }
 
 #start:hover{
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    border-color: red;
 }
 
 
 
-#rock{
-    opacity: 0;
-}
 
-#paper{
-    opacity: 0;
-}
-
-#scissors{
-    opacity: 0;
-}
 
 #title{
     font-size: 60px;
     font-family: pixel;
-    color: black;
+    color: rgb(255, 255, 255);
     position: fixed;
     top: 100px;
     left: 690px;
@@ -51,7 +47,7 @@
 #mania{
      font-size: 80px;
     font-family: pixel;
-    color: black;
+    color: rgb(255, 1, 1);
     position: fixed;
     top: 170px;
     left: 840px;
@@ -65,17 +61,19 @@
     position: fixed;
     top: 610px;
     left: 450px;
-    background-color: white;
-    border: 2px solid black;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
     font-size: 40px;
+    color: white;
     font-family: pixel;
     transition-duration: 0.4s;
     
 }
 
 #store:hover{
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    border-color: red;
 }
 
 #credits{
@@ -84,17 +82,19 @@
     position: fixed;
     top: 610px;
     left: 1150px;
-    background-color: white;
-    border: 2px solid black;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
     font-size: 40px;
     font-family: pixel;
     transition-duration: 0.4s;
+    color: white;
     z-index: 1;
    
 }
 #credits:hover{
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    border-color: red;
 }
 
 #tutorial{
@@ -205,10 +205,30 @@
     
 }
 
+#plr{
+    width: 150px;
+    position: fixed;
+    left: 80px;
+    top: 40px;
+    opacity: 1;
+
+    
+}
+
 #botname{
     width: 150px;
     position: fixed;
     right: 250px;
+    top: 90px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+}
+
+#plrname{
+    width: 150px;
+    position: fixed;
+    left: 250px;
     top: 90px;
     font-family: pixel;
     font-size: 80px;
@@ -294,26 +314,26 @@
 }
 
 #aiwin{
-    color:aliceblue;
+    color:rgb(255, 0, 0);
     position: fixed;
     top: 300px;
-    left: 1000px;
+    left: 900px;
     font-family: pixel;
     font-size: 60px;
     opacity: 0;
 }
 
 #youwin{
-    color:aliceblue;
+    color:rgb(238, 255, 0);
     position: fixed;
     top: 300px;
-    left: 1000px;
+    left: 900px;
     font-family: pixel;
     font-size: 60px;
     opacity: 0;
 }
 #tie{
-    color:rgb(255, 255, 255);
+    color:rgb(255, 136, 0);
     position: fixed;
     top: 300px;
     left: 1000px;
@@ -367,4 +387,70 @@
     border-color: red;
     color: rgb(255, 255, 255);
 
+}
+
+#plrrock{
+    width: 150px;
+    position: fixed;
+    left: 250px;
+    top: 500px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+    opacity: 0;
+}
+
+#plrpaper{
+    width: 150px;
+    position: fixed;
+    left: 250px;
+    top: 500px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+    opacity: 0;
+}
+
+#plrscissors{
+    width: 150px;
+    position: fixed;
+    left: 200px;
+    top: 500px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+    opacity: 0;
+}
+
+#airock{
+    width: 150px;
+    position: fixed;
+    right: 250px;
+    top: 500px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+    opacity: 0;
+}
+
+#aipaper{
+    width: 150px;
+    position: fixed;
+    right: 250px;
+    top: 500px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+    opacity: 0;
+}
+
+#aiscissors{
+    width: 150px;
+    position: fixed;
+    right: 250px;
+    top: 500px;
+    font-family: pixel;
+    font-size: 80px;
+    color: white;
+    opacity: 0;
 }
