--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     color: rgb(255, 255, 255);
     position: fixed;
     top: 100px;
-    left: 690px;
+    left: 700px;
     z-index: 1;
     
 }
@@ -50,7 +50,7 @@
     color: rgb(255, 1, 1);
     position: fixed;
     top: 170px;
-    left: 840px;
+    left: 860px;
     z-index: 1;
     
 }
@@ -238,6 +238,7 @@
 #game{
     display: none;
 }
+
 
 
 #selecttitle{
@@ -453,4 +454,29 @@
     font-size: 80px;
     color: white;
     opacity: 0;
+}
+
+#menubot{
+    width: 150px;
+    position: fixed;
+    right: 400px;
+    top: 80px;
+    transition-duration: 0.4s;
+}
+
+#menubot:hover{
+    width: 170px;
+}
+#menuplr{
+    width: 150px;
+    position: fixed;
+    left: 400px;
+    top: 80px;
+
+    transition-duration: 0.4s;
+ 
+}
+
+#menuplr:hover{
+    width: 170px;
 }
